# Catalyx

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  pyproject.toml
.claude/: settings.json
.claude/commands/: catalyx-close.md  catalyx-dashboard.md  catalyx-heatmap.md  catalyx-monthly-review.md  catalyx-open.md  catalyx-review.md  catalyx-scan.md  catalyx-sector-study.md  catalyx-thesis.md  catalyx-update.md
.github/workflows/: deploy-dashboard.yml  pages.yml
catalyx/: __init__.py
catalyx/attribution/: outcome.py  thesis_scorer.py
catalyx/cli/: main.py
catalyx/config/: catalyst_taxonomy.yaml  etf_universe.yaml  scoring_weights.yaml  sector_taxonomy.yaml  track_record.yaml  weights.py
catalyx/data/: __init__.py  backfill_history.py  flow_data.py  market_data.py
catalyx/execution/: nav_engine.py  portfolio.py  tax_engine.py  trade_logger.py
catalyx/scorer/: __init__.py  catalyst_scorer.py  dislocation.py  entry_timing.py  exit_watcher.py  freshness.py  intensity_engine.py  momentum_engine.py  sector_scorer.py  technical_study.py
dashboard/: README.md  package.json
docs/: DESIGN_catalyst_regime_discrimination.md  DESIGN_experiment_ledger.md  DESIGN_sell_signals.md  PLAN_lake_dvc_serving.md  PLAN_movement_restructure.md  pipeline_test_prompt.md
experiments/: README.md  backtest_acceleration.py  exp_2026-06-05_ai_selloff.md
schemas/: catalyst_event.json  closed_thesis.json  movement.json  portfolio.json  sector_snapshot.json  sector_study.json  structural_catalyst.json  taxonomy_gap_proposal.json  thesis.json
scripts/: build_site.py  seed_dislocation_sample.py
site/: app.js  index.html
(+280 files in other folders)
