[project]
name = "catalyx"
version = "0.1.0"
description = "Macro catalyst → sector ETF thesis platform"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "rich>=13.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    # Phase 1
    "pydantic>=2.7",
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
llm = [
    # Separate: requires API keys and pay-per-token billing
    "anthropic>=0.40",
    "openai>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "datasette>=0.64",
]

[project.scripts]
catalyx = "catalyx.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catalyx"]
