[project]
name = "catalyx"
version = "0.3.1"
description = "Macro catalyst → sector ETF movement platform"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "rich>=13.7",
    "pyyaml>=6.0",
    "ruamel-yaml>=0.18",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "jsonschema>=4.22",   # schema validation in tests
    "pyarrow>=24.0.0",    # parquet lake (Tier 2)
    "pandas>=2.2",
    "duckdb>=1.1",        # lake read-path (same SQL runs in DuckDB-WASM in the browser)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
catalyx = "catalyx.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["catalyx"]
